--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>demo-parent</name>
 	<description>Demo project for Spring Boot</description>
@@ -87,4 +87,9 @@
 	</build>
 
 
+	<modules>
+		<module>common</module>
+		<module>webapp</module>
+		<module>backcode</module>
+	</modules>
 </project>
