--- a/demo-parent/pom.xml
+++ b/demo-parent/pom.xml
@@ -75,6 +75,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- 去掉语法检测 -->
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
