--- a/demo-parent/backcode/src/main/resources/application-local.yml
+++ b/demo-parent/backcode/src/main/resources/application-local.yml
@@ -8,6 +8,34 @@ spring:
   jackson:  
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: Asia/Chongqing
+  thymeleaf:
+    prefix: classpath:/templates
+    suffix: .html
+    mode: LEGACYHTML5
+    encoding: UTF-8
+    content-type: text/html
+    cache: false
+  
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/frameworkdemo?useSSL=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: root
 
+  jpa:
+    database: mysql
+    show-sql: true
+    generate-ddl: false
+    open-in-view: true
+  
 logging:
   config: classpath:log4j2.xml
+  
+  #spring:
+#  thymeleaf:
+#    prefix: classpath:/templates
+#    suffix: .html
+#    mode: LEGACYHTML5
+#    encoding: UTF-8
+#    content-type: text/html
+#    cache: false
