--- a/demo-parent/.gitignore
+++ b/demo-parent/.gitignore
@@ -9,11 +9,13 @@ target/
 .settings
 .springBeans
 
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+*.log
 
 ### NetBeans ###
 nbproject/private/
@@ -22,3 +24,4 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+/.gitignore
